# debeng

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
edi/: CMakeLists.txt
edi/resources/shaders/: base.frag  base.vert  depth.vert  flat.frag  flat.vert  fs.glsl  light_cull.comp  screen_quad.frag  screen_quad.vert  skybox.frag  skybox.vert  vs.glsl
edi/resources/shaders/bloom/: downsampler.comp  filter.comp  upsampler.comp
edi/resources/shaders/envmap/: brdf.comp  cubemap_convolution.comp  equirec_to_cubemap.comp  prefilter_convolution.comp
edi/resources/shaders/post_proc/: post_process_combine.comp
edi/resources/shaders/shadows/: dirlight.geom  pointlight.frag  pointlight.geom  spotlight.geom
edi/src/: context.cpp  context.hpp  editor_layer.cpp  layers.hpp  main.cpp  result.hpp
eng/: CMakeLists.txt
eng/include/eng/: event.hpp  input.hpp  random_utils.hpp  test.hpp  timer.hpp  trigger_timer.hpp  window.hpp
eng/include/eng/containers/: registry.hpp  typeless_vec.hpp  vector_wrapper.hpp
eng/include/eng/parsers/: gltf.hpp
eng/include/eng/renderer/: camera.hpp  opengl.hpp  primitives.hpp  renderer.hpp
eng/include/eng/scene/: assets.hpp  components.hpp  entity.hpp  scene.hpp
eng/src/: input.cpp  random_utils.cpp  test.cpp  timer.cpp  trigger_timer.cpp  window.cpp
eng/src/containers/: registry.cpp
eng/src/parsers/: gltf.cpp
eng/src/renderer/: camera.cpp  opengl.cpp  primitives.cpp  renderer.cpp
eng/src/scene/: assets.cpp  components.cpp  scene.cpp
eng/tests/: CMakeLists.txt  ecs_registry_tests.cpp  entry.cpp  timer_tests.cpp  trigger_timer_tests.cpp  typeless_vector_tests.cpp
